[gd_scene load_steps=7 format=3 uid="uid://d4btsosh7xevh"]

[ext_resource type="Script" path="res://Main/puzzles/SuffixPuzzle.gd" id="1_p6m4d"]
[ext_resource type="PackedScene" uid="uid://dk41yqgraj1mj" path="res://Main/objects/book.tscn" id="2_hauo2"]
[ext_resource type="FontFile" uid="uid://c483ft8t5xcdi" path="res://Main/assets/fonts/MarckScript-Regular.ttf" id="3_6tjfj"]
[ext_resource type="AudioStream" uid="uid://sisexjlqc6st" path="res://Main/assets/sounds/page-flip.wav" id="4_j2wj1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pgdir"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myfp7"]

[node name="SuffixPuzzle" type="Node2D"]
script = ExtResource("1_p6m4d")

[node name="Sprite2D2" parent="." instance=ExtResource("2_hauo2")]

[node name="Task" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SourceContainter" type="VBoxContainer" parent="Task"]
offset_left = 247.0
offset_top = 267.0
offset_right = 457.0
offset_bottom = 587.0

[node name="MarginContainer" type="MarginContainer" parent="Task/SourceContainter"]
layout_mode = 2

[node name="Draggables" type="VBoxContainer" parent="Task/SourceContainter/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TargetContainer" type="PanelContainer" parent="Task"]
offset_left = 556.0
offset_top = 273.0
offset_right = 863.0
offset_bottom = 638.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_pgdir")

[node name="HBoxContainer" type="HBoxContainer" parent="Task/TargetContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Labels" type="VBoxContainer" parent="Task/TargetContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Task/TargetContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6tjfj")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxEmpty_myfp7")
text = "MUSICIAN"
vertical_alignment = 1

[node name="Label2" type="Label" parent="Task/TargetContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6tjfj")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxEmpty_myfp7")
text = "ART"
vertical_alignment = 1

[node name="Label3" type="Label" parent="Task/TargetContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6tjfj")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxEmpty_myfp7")
text = "CULTIST"
vertical_alignment = 1

[node name="Label4" type="Label" parent="Task/TargetContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6tjfj")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxEmpty_myfp7")
text = "ARTIST"
vertical_alignment = 1

[node name="Label5" type="Label" parent="Task/TargetContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6tjfj")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxEmpty_myfp7")
text = "CULT"
vertical_alignment = 1

[node name="Label6" type="Label" parent="Task/TargetContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6tjfj")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxEmpty_myfp7")
text = "MUSICIANS"
vertical_alignment = 1

[node name="Label7" type="Label" parent="Task/TargetContainer/HBoxContainer/Labels"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6tjfj")
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxEmpty_myfp7")
text = "CULTS"
vertical_alignment = 1

[node name="Droppables" type="VBoxContainer" parent="Task/TargetContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Hint" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Hint"]
layout_mode = 0
offset_left = 159.0
offset_top = 321.0
offset_right = 523.0
offset_bottom = 530.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_6tjfj")
theme_override_font_sizes/font_size = 26
text = "SUFFIX_HINT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PageFlip" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_j2wj1")
